--- a/index.html
+++ b/index.html
@@ -7,29 +7,40 @@
 </head>
 <body>
 <div class="container">
+<div class="calculator">
   <div class="top">
-    <span class="clear">C<span>
+    <button class="clear">C</button>
     <div class="view"></div>
   </div>
+  <div class="keypad">
+    <div class="keys">
+      <div class="row1">
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button class="operator">/</button>
+      </div>
+      <div class="row2">
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button class="operator">X</button>
+      </div>
+      <div class="row3">
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button class="operator">-</button>
+      </div>
+      <div class="row4">
+        <button>0</button>
+        <button class="decimal">.</button>
+        <button class="equals">=</button>
+        <button class="operator">+</button>
+      </div>
+    </div>
+  </div>
 </div>
-<div class="keypad">
-  <div class="keys">
-    <span>7</span>
-    <span>8</span>
-    <span>9</span>
-    <span class="operator">/</span>
-    <span>4</span>
-    <span>5</span>
-    <span>6</span>
-    <span class="operator">x</span>
-    <span>1</span>
-    <span>2</span>
-    <span>3</span>
-    <span class="operator">-</span>
-    <span>0</span>
-    <span class="decimal">.</span>
-    <span class="equals">=</span>
-    <span class="operator">+</span>
 </div>
 <script type="text/javascript" src="main.js"></script>
 </body>
